--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^18.10.0",
     "nodemon": "^2.0.20"
   },
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.14",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
     "@types/nodemon": "^1.19.2",
     "@types/typescript": "^2.0.0",
