--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/server.ts",
+    "test:unit": "dotenv -e .env.test jest -- -i --coverage ./tests/unit",
+    "build": "tsc && npx prisma generate && npx prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
