--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc && npx prisma generate && npx prisma migrate deploy",
+    "build": "npm i && tsc && npx prisma generate && npx prisma migrate deploy",
     "dev": "nodemon src/index.ts",
     "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/index.ts",
     "test:unit": "dotenv -e .env.test jest -- -i --coverage ./tests/unit",
