--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "scripts": {
     "build": "npm i && tsc" ,
-    "start": "npx prisma generate && npx prisma migrate deploy && node dist/src/server.js",
+    "start": "npx prisma generate && npx prisma migrate deploy && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/index.ts",
     "test:unit": "dotenv -e .env.test jest -- -i --coverage ./tests/unit",
